Cambios para QA

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,11 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/ikepagos
+#spring.datasource.url=jdbc:mysql://localhost:3306/ikepagos
+#spring.datasource.driverClassName= com.mysql.jdbc.Driver
+#spring.datasource.username=root
+#spring.datasource.password=
+#spring.jpa.hibernate.ddl-auto= update
+
+spring.datasource.url=jdbc:mysql://ike-db-ecommerce-dev.cluster-cut2e5vnrecv.us-east-2.rds.amazonaws.com:3306/lockton_dev
 spring.datasource.driverClassName= com.mysql.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.username=usrlockton_dev
+spring.datasource.password=I@DVcU$t59Y93Uad7gpY
 spring.jpa.hibernate.ddl-auto= update
