--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,11 @@ dependencies {
 	implementation 'mysql:mysql-connector-java:5.1.13'
 	implementation 'com.h2database:h2'
 	implementation 'com.google.code.gson:gson:2.9.0'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'io.jsonwebtoken:jjwt-api:0.10.2'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.10.2'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
