--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.datasource.driverClassName= com.mysql.jdbc.Driver
 spring.datasource.username=usrlockton_dev
 spring.datasource.password=I@DVcU$t59Y93Uad7gpY
 spring.jpa.hibernate.ddl-auto= update
+spring.datasource.hikari.maximum-pool-size=2
