--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ repositories {
 
 dependencies {
 	implementation "org.springframework.boot:spring-boot-starter-data-jpa"
+	implementation "org.springframework.boot:spring-boot-starter-validation"
 	implementation 'mysql:mysql-connector-java:5.1.13'
 	implementation 'com.h2database:h2'
 	implementation 'com.google.code.gson:gson:2.9.0'
